--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="clouds">
         <div class="cloud">
         </div>
-        <div class="cloud cloud-gray">
+        <div class="cloud cloud-grey">
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
           <div class="thunderbolt"></div>
         </div>
       </div>
-      <div class="cloud cloud-gray">
+      <div class="cloud cloud-grey">
       </div>
     </div>
 
